# ocaml-template

./: .gitignore  Makefile  NOTES  README.md  ocaml-template.opam
mylib/src/: jbuild  mymodule.ml  mymodule.mli
mylib/test/: jbuild  test_mymodule.ml
